added starting line od paragraph

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Document</title>
 </head>
-<body>
-
+  <body>
+<p>Alphonse Mucha was a artist of the art nouveo movement.Paramounti n bringing forth so many diffrent and facsinating new was to express and to advertise.  </p>
 </body>
 </html>
