testing new border colors

--- a/index.html
+++ b/index.html
@@ -7,6 +7,27 @@
   <title>Document</title>
 </head>
 <body>
-
+  <style>
+ * {
+    margin: 0;
+    padding: 0;
+    border: 9px solid black;
+ }
+ html {
+    border-color: black
+    ;
+    width: 960px;
+ }
+ body {
+    border-color: orange
+  ;
+    width: 960px;
+ }
+ p {
+    border-color: violet;
+    width: 400px;
+ }
+    </style>
+<p>Alphonse Mucha was a artist of the art nevoue movement</p>center
 </body>
 </html>
