added title , removed tested colors

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Document</title>
+  <title>Alphonse Mucha</title>
 </head>
 <body>
   <style>
@@ -17,17 +17,13 @@
     border-color: black
     ;
     width: 960px;
- }
- body {
-    border-color: orange
+
   ;
     width: 960px;
  }
- p {
-    border-color: violet;
-    width: 400px;
- }
+
     </style>
-<p>Alphonse Mucha was a artist of the art nevoue movement</p>center
+<p>Alphonse Mucha was a artist of the art nevoue movement</p>
+textsize
 </body>
 </html>
