--- a/index.html
+++ b/index.html
@@ -5,25 +5,24 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Alphonse Mucha</title>
-</head>
+  <link rel="stylesheet" href="/css/master.css">
+
 <body>
-  <style>
- * {
-    margin: 0;
-    padding: 0;
-    border: 9px solid black;
- }
- html {
-    border-color: black
-    ;
-    width: 960px;
 
-  ;
-    width: 960px;
- }
+<div>
 
-    </style>
-<p>Alphonse Mucha was a artist of the art nevoue movement</p>
-textsize
+    <h1>Alphonse Mucha</h1>
+
+    <p>Alphonse Mucha was a very revered artist of his time, he was a man   </p>
+
+
+</div>
+
+
+
+
+
+
 </body>
+
 </html>
