--- a/index.html
+++ b/index.html
@@ -5,7 +5,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Alphonse Mucha</title>
-  <link rel="stylesheet" href="/css/master.css">
+  <style>
+
+  h1{
+text-align: center;
+  font-size: 70px
+
+  }
+    </style>
 
 <body>
 
@@ -17,8 +24,6 @@
 
 
 </div>
-
-
 
 
 
