--- a/index.html
+++ b/index.html
@@ -4,15 +4,31 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="stylesheet" href="style.css">
   <title>Alphonse Mucha</title>
-  <style>
 
-  h1{
+
+<!-- NOTE: this needs to be moved to style.css -->
+
+
+<style>
+
+p{
+  text-align: center;
+
+}
+
+h1{
 text-align: center;
-  font-size: 70px
+font-size: 70px
 
-  }
-    </style>
+}
+  </style>
+
+
+<!-- NOTE: all above has to be in style.css but its not wokring and i dont know why  -->
+
+
 
 <body>
 
