added fonts situation

--- a/index.html
+++ b/index.html
@@ -4,17 +4,35 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link rel="stylesheet" href="style.css">
+
+<link rel="stylesheet" href="/css/master.css">
+
   <title>Alphonse Mucha</title>
 
+
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Roboto+Slab" rel="stylesheet">
+        <style>
+     body {
+        font-family: 'Open Sans Condensed', sans-serif;
+     }
+     h1 {
+        font-family: 'Roboto Slab', serif;
+     }
+     b, strong {
+        font-weight: 300;
+     }
+        </style>
 
 <!-- NOTE: this needs to be moved to style.css -->
 
 
 <style>
 
+
 p{
   text-align: center;
+font-size: 50px
 
 }
 
@@ -23,6 +41,21 @@ text-align: center;
 font-size: 70px
 
 }
+
+h2{
+text-align: center;
+font-size: 70px
+
+}
+
+
+  </style>
+
+
+  <style>
+  body {
+  background-color: #C0C0C0
+  }
   </style>
 
 
@@ -31,19 +64,39 @@ font-size: 70px
 
 
 <body>
-
 <div>
+
 
     <h1>Alphonse Mucha</h1>
 
-    <p>Alphonse Mucha was a very revered artist of his time, he was a man   </p>
+    <h2></h2>
+    <img src="img/pic1.jpg" alt="" width="980" height="733">
+
+
+
+
+    <p>Alphonse Mucha was a very revered and inspiring man; he was a revolutionary artist from his time. He was a major part of the Art Nouveau movement.
+      Originating from the Czech Republic and
+       been born in 1906 and passing sadly in 1939. He was a amazing artist whos talents went from painting to being one of the most prolific adverstising artist of his time.
+     Who's art style and skil brought inspiration to all those who saw it. This person is special to me because as a young artist his works are very inspirational; and gives me hope for all styles being accepted
+   and respected in thier own right.
+
+
+
+
+
+
+
+    </p>
 
 
 </div>
 
 
-
-
 </body>
+
+
+
+
 
 </html>
