--- a/index.html
+++ b/index.html
@@ -69,11 +69,12 @@ font-size: 70px
 
     <h1>Alphonse Mucha</h1>
 
-    <h2></h2>
-    <img src="img/pic1.jpg" alt="" width="980" height="733">
 
+    <img src="img/pic1.jpg" alt="" width="1030" height="833">
 
+  <img src="img/pic2.jpg" alt="" width="1030" height="833">
 
+  <h2>A word about Alphone Mucha</h2>
 
     <p>Alphonse Mucha was a very revered and inspiring man; he was a revolutionary artist from his time. He was a major part of the Art Nouveau movement.
       Originating from the Czech Republic and
