--- a/index.html
+++ b/index.html
@@ -30,6 +30,12 @@
 <style>
 
 
+body{
+  text-align: center;
+
+
+}
+
 p{
   text-align: center;
 font-size: 50px
@@ -47,6 +53,14 @@ text-align: center;
 font-size: 70px
 
 }
+
+
+h3{
+text-align: center;
+font-size: 70px
+
+}
+
 
 
   </style>
@@ -74,24 +88,25 @@ font-size: 70px
 
   <img src="img/pic2.jpg" alt="" width="1040" height="833">
 
-  <h2>A word about Alphone Mucha</h2>
+  <h2>A word about Alphonse Mucha</h2>
 
     <p>Alphonse Mucha was a very revered and inspiring man; he was a revolutionary artist from his time. He was a major part of the Art Nouveau movement.
       Originating from the Czech Republic and
        been born in 1906 and passing sadly in 1939. He was a amazing artist whos talents went from painting to being one of the most prolific adverstising artist of his time.
      Who's art style and skil brought inspiration to all those who saw it. This person is special to me because as a young artist his works are very inspirational; and gives me hope for all styles being accepted
-   and respected in thier own right.
-
-
-
-
-
-
-
-    </p>
+   and respected in thier own right.</p>
 
 
 </div>
+
+
+<h3>Videos of his art workwork</h3>
+<ul>
+  <a href="https://www.youtube.com/watch?v=HJWHIeWPfBs" target="_blank" rel="noopener"> <p> Video showcasing his most famous works of art </p> </a>
+
+</ul>
+
+
 
 
 </body>
