--- a/index.html
+++ b/index.html
@@ -84,9 +84,9 @@ font-size: 70px
     <h1>Alphonse Mucha</h1>
 
 
-    <img src="img/pic1.jpg" alt="" width="1040" height="833">
+    <img src="https://upload.wikimedia.org/wikipedia/commons/2/29/Alfons_Mucha_LOC_3c05828u.jpg" alt="" width="1040" height="833">
 
-  <img src="img/pic2.jpg" alt="" width="1040" height="833">
+  <img src="https://artmap.com/static/media/0000112000/0000111260.jpg" alt="" width="1040" height="833">
 
   <h2>A word about Alphonse Mucha</h2>
 
